--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             gravida aliquam nunc. Morbi quis erat imperdiet, molestie nunc ut,
             accumsan diam.
           </p>
-          <button class="btn">VIEW SCHEDULE</button>
+          <button class="btn class-btn">VIEW SCHEDULE</button>
         </div>
         </div>
       </div>
@@ -407,6 +407,8 @@
           </div>
         </div>
       </div>
+
+      <!--  map  form -->
 
 
       <section id="Contact">
